[package]
name = "chirp8-avr"
version = "0.1.0"
authors = ["Dr. ERDI Gergo <gergo@erdi.hu>"]
build-std = "core"

[build-dependencies]
cc = "1.0"

[dependencies]
chirp8-engine = { path = "chirp8-engine" }
avr-std-stub = { version = "1.0" }
ruduino = {  git = "https://github.com/avr-rust/ruduino", rev = "c0574999752c6bfc2c190312661a0c264247e5b1" }
avr-progmem = { version = "0.3.1" }

[profile.release]
lto = true
